<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">No Name</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Contact_Name">Contact Name</string>
    <string name="Contact_Phone_Number">Contact PhoneNumber</string>
    <string name="button_fetch_contacts">Fetch Contacts</string>
    <string name="button_import_contacts">Save and Exit</string>
    <string name="textView_contact_information">Contact Information</string>
    <string name="action_load_favorite_contacts">Load Favorite Contacts</string>
    <string name="action_load_drunk_contacts">Load Emergency Contacts</string>
    <string name="label_favorite_contacts">Favorite Contacts</string>
    <string name="button_send_all">Send to All Favorite Friends</string>
    <string name="label_map_get_directions">Route Between Two Points</string>
    <string name="label_map_drunk_mode">Go Home</string>
    <string name="label_load_phone_contacts">Load Phone Contacts</string>
    <string name="label_map_set_home_location">Set Your Home Location</string>
    <string name="content_description_call">Call Favorite Contact</string>
    <string name="content_description_sms">Send SMS Favorite Contact</string>
    <string name="import_contacts_from_phone">Import More Contacts</string>
    <string name="delete_multiple_phone_favorites">Delete Selected Contacts</string>
    <string name="route_between_addresses">Route Between Addresses</string>
    <string name="insert_phone_record">Insert</string>
    <string name="insert_dialog_title">Insert your Friend in need</string>
    <string name="hint_friends_name">Friend name</string>
    <string name="hint_friends_phoneNumber">Friend PhoneNumber</string>
    <string name="answer_ok">OK</string>
    <string name="answer_cancel">Cancel</string>
    <string name="setting_set_home_location">Set Home Location</string>
    <string name="setting_take_me_home">Get me Home</string>
    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">Bicycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="str_directions">Get Directions</string>
    <string name="routeTitle">How to get there</string>
    <string name="numbersForDest">Numbering</string>
    <string name="button_save_home_location">Save Home Location</string>
    <string name="hint_tap_to_send_message">Tap to send a message!</string>
    <string name="description_call_my_friend">Call My Friends</string>
    <string name="multicare_label_widget">Multicare©</string>
    <string name="map_prompt">Choose Map Category</string>
    <string name="label_locker">Lock/Unlock applications</string>
    <string name="label_quotes">Quote of the Day</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="favorite_contacts">Favorite Contacts</string>
    <string name="type_your_secret_code">Enter Password to Unlock</string>
    <string name="stop_service">Stop Multi-locker Service</string>
    <string name="source_address">Source Address</string>
    <string name="destination_address">Destination Address</string>
    <string name="button_submit">Draw Route</string>
    <string name="button_disable_locker">Disable Locker</string>
    <string name="button_disable_drunk_mode">Disable Drunk Mode</string>
    <string name="button_disable_both">Disable Both</string>
    <string name="button_submit_password">Submit Password</string>
    <string name="button_password">Password</string>
    <string name="button_drunk">Enable Drunk Mode</string>
    <string name="button_disable_drunk">Disable Drunk Mode</string>
    <string name="hint_answer">Tap to Give Answer</string>
    
    <string-array name="map_categories">
        <item>Sattelite View</item>
        <item>RoadMap View</item>
        <item>Hybrid View</item>
        <item>Terrain View</item>
    </string-array>

</resources>