<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="3dp"
    tools:context=".MapActivity" >

    <RadioGroup
        android:id="@+id/rg_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/str_rb_driving" />

        <RadioButton
            android:id="@+id/rb_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_walking" />
    </RadioGroup>

    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rg_modes"
        android:layout_below="@+id/buttonSubmit"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <Spinner
        android:id="@+id/spinnerSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:entries="@array/map_categories"
        android:prompt="@string/map_prompt" />


    <EditText
        android:id="@+id/editTextFromAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerSelection"
        android:ems="10"
        android:hint="@string/source_address" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextToAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextFromAddress"
        android:ems="10"
        android:hint="@string/destination_address" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextToAddress"
        android:text="@string/button_submit" />

    <Button
        android:id="@+id/getDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/map"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:text="@string/str_directions" />

</RelativeLayout>